feat(form): wire up basic form

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
-.AppBackground {
-    background: yellow;
+.App {
+  font-family: sans-serif;
+  text-align: center;
 }
+  
+.AppBackground {
+  background: #ccc;
+}
+  
