--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap");
-
-.App {
-  font-family: "PT Sans", sans-serif;
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap");
 
 input,
 select {
   font-family: "PT Sans", sans-serif;
+}
+
+.NoUnderline {
+  text-decoration: none;
+}
+
+.Flex {
+  display: flex;
 }
 
 .FlexColumn {
@@ -16,47 +19,8 @@ select {
   flex-direction: column;
 }
 
-.Header {
-  background-color: #ddd;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.HeaderText {
-  margin: 6px 10px;
-  font-family: "Lobster Two", cursive;
-  font-size: 24px;
-}
-
-.HeaderSubtext {
-  margin: 6px 10px;
-  font-style: italic;
-}
-
-.FormContainer {
-  box-shadow: 0px 2px 4px #ccc;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-}
-
-.SectionTitle {
-  font-weight: 700;
-}
-
 .FormFieldContainer {
   display: flex;
   flex-direction: column;
   margin-bottom: 16px;
-}
-
-.PreviewContainer {
-  box-shadow: 0px 2px 4px #ccc;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  background-color: #eee;
-}
-
-.PreviewTextBlock {
-  margin: 20px;
 }
